# ChartLib

./: .clang-format  CMakeLists.txt  Makefile
include/: chart.hpp  chartlib.hpp  drawer.hpp  plotter.hpp  types.hpp  utils.hpp
src/: chart.cpp  drawer.cpp  plotter.cpp  utils.cpp
